# SIM_Support-ChatBot

./: .gitignore  README.md  SIM_Support_Chatbot_PRD.md  backend.py  chatbot.db  main.py  pyproject.toml  rag_hyde.py  rag_pipeline.ipynb  rag_pipeline_test01.ipynb  requirements.txt  test.ipynb  ui.py
knowledge_base/: RAG_KB_bot.md  restructured_1-6.md
notebook/: 01_file_loader.ipynb  02_text_splitters.ipynb  03_embeddings.ipynb  04_retrievers.ipynb  05_HyDE.ipynb  hybrid_vs_ccr.ipynb  rag_pipeline.ipynb  rag_pipeline_test01.ipynb
