[project]
name = "sim-support-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain[community]>=1.2.18",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "unstructured>=0.22.29",
]
